# FlagGame

./: README.de.md  README.md  country_api.py  flag_loader.py  highscore.json  pyproject.toml  requirements.txt
src/: countries.json  country.py  country_api.py  flag_loader.py  logic_handler.py  main.py
src/assets/: countries.json
