[project]
name = "flaggame"
version = "0.1.0"
description = "An interactive country flag guessing game built with Python and Flet."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Alexandru Petrovici" }
]
dependencies = [
    "flet>=0.85.3",
    "Unidecode>=1.4.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
]

[tool.flet]
org = "com.alexpetrovici"
product = "flaggame"
company = "Alexandru Petrovici"
app_icon = "src/assets/icon.png"
copyright = "Copyright (C) 2026 Alexandru Petrovici"

[tool.flet.app]
path = "src"
